--- a/project-g1/src/components/LoadingScreen/LoadingScreen.css
+++ b/project-g1/src/components/LoadingScreen/LoadingScreen.css
@@ -1,15 +1,27 @@
+.LoadingScreen {
+  flex-wrap: wrap;
+  align-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 55vh;
+}
+
 .LoadingScreen-bar {
-    position: fixed;
-    /* top: 0;
-    left: 0; */
-    width: 100%;
-    height: 2px; /* Ajuste a altura conforme necessário */
-    background-color: #ddd; /* Cor da barra de progresso não preenchida */
-  }
-  
-  .progress {
-    height: 100%;
-    background-color: #4caf50; /* Cor da barra de progresso preenchida */
-    transition: width 0.5s ease; /* Adiciona uma animação suave */
-  }
-  
+  /* position: fixed; */
+  /* top: 0;
+  left: 0; */
+  width: 100%;
+  height: 5px;
+  background-color: #ddd;
+}
+
+.progress {
+  margin: 5px 0;
+  height: 100%;
+  background-color: aqua;
+  transition: width 1s ease;
+}
+
+.loading-text {
+  color: aqua;
+}
