--- a/project-g1/src/components/Navbar/Navbar.css
+++ b/project-g1/src/components/Navbar/Navbar.css
@@ -53,7 +53,7 @@
 
     }
 
-    .navbar ul {
+    .navbar>ul {
         display: flex;
         flex-wrap: wrap;
         gap: 10px;
@@ -80,13 +80,14 @@
         font-size: 1em;
     }
 
-    .navbar li>a {
+    .navbar>li>a {
         font-size: 0.4em;
         padding: 10px;
 
     }
 
-    .navbar ul {
+    .navbar>ul {
+        justify-content: space-between;
         display: flex;
         flex-wrap: wrap;
         gap: 10px;
@@ -119,4 +120,5 @@ a>h1 {
     padding: 8px;
     text-transform: uppercase;
     color: white;
+    font-size: 1em;
 }
