--- a/project-g1/src/components/Navbar/Navbar.css
+++ b/project-g1/src/components/Navbar/Navbar.css
@@ -105,7 +105,15 @@ a>h1 {
     font-size: 2.5em;
 }
 
-.navbar>ul {
+.navbar > div {
+    display: flex;
+    flex-wrap: wrap;
+    width: 1200px;
+    margin: auto;
+    justify-content: space-between;
+}
+
+.navbar> div >ul {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
