--- a/project-g1/src/pages/GameDetails/GameDetails.css
+++ b/project-g1/src/pages/GameDetails/GameDetails.css
@@ -123,6 +123,30 @@
     color: rgb(255, 0, 0);
 }
 
+.like-dislike-container {
+    width: 100%;
+    flex-wrap: wrap;
+    flex-direction: column;
+    display: flex;
+}
+
+.like-dislike-container > div {
+    max-width: 100%;
+    flex-wrap: wrap;
+    display: flex;
+    gap: 10px;
+}
+
+.like-dislike-container > div > button{
+    width: 50px;
+    flex-wrap: wrap;
+    display: flex;
+}
+
+.like-dislike-container > p {
+    max-width: 100%;
+}
+
 .game-details-container {
     width: 100%;
     margin: auto;
@@ -277,11 +301,11 @@
     border: 2px solid purple;
 }
 
-.description-container > p {
+.description-container>p {
     display: flex;
     text-align: left;
     padding: 10px;
-    color:#000;
+    color: #000;
 }
 
 #system-requirements {
