--- a/project-g1/src/components/Sidebar/Sidebar.css
+++ b/project-g1/src/components/Sidebar/Sidebar.css
@@ -94,6 +94,17 @@
     transition: background-color 0.3s ease;
 }
 
+.links_list li > .em-breve {
+    border: none;
+    cursor: not-allowed;
+    width: 100%;
+    color: #000;
+    display: flex;
+    align-items: center;
+    padding: 12px;
+    border-radius: 8px;
+}
+
 .links_list a:hover {
     background-color: #f0f0f0;
 }
