--- a/project-g1/src/components/LikeDislike/LikeDislike.css
+++ b/project-g1/src/components/LikeDislike/LikeDislike.css
@@ -18,9 +18,11 @@
     flex-wrap: wrap;
     display: flex;
     cursor: pointer;
+    align-items: center;
 }
 
 .dark-mode .like-dislike-container>div>button>span {
+    display: flex;
     color: #fff;
     font-size: 1.2em;
 }
