--- a/project-g1/src/pages/GameDetails/GameDetails.css
+++ b/project-g1/src/pages/GameDetails/GameDetails.css
@@ -110,14 +110,19 @@
     justify-content: space-between;
 }
 
-#status>button {
+#status > div {
+    display: flex;
+    gap: 10px;
+}
+
+#status > div >button {
     display: flex;
     border: none;
     background: none;
     cursor: pointer;
 }
 
-#status>button .bi-bookmarks-fill {
+#status > div >button .bi-bookmarks-fill {
     text-transform: uppercase;
     font-size: 2.2em;
     color: rgb(255, 0, 0);
