--- a/project-g1/src/pages/GameDetails/GameDetails.css
+++ b/project-g1/src/pages/GameDetails/GameDetails.css
@@ -110,6 +110,14 @@
     justify-content: space-between;
 }
 
+#status > .title-date {
+    flex-direction: column;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    text-align: left;
+}
+
 #status > div {
     display: flex;
     gap: 10px;
