--- a/project-g1/src/pages/GameDetails/GameDetails.css
+++ b/project-g1/src/pages/GameDetails/GameDetails.css
@@ -110,7 +110,7 @@
     justify-content: space-between;
 }
 
-#status > .title-date {
+#status>.title-date {
     flex-direction: column;
     display: flex;
     flex-wrap: wrap;
@@ -118,19 +118,19 @@
     text-align: left;
 }
 
-#status > div {
+#status>div {
     display: flex;
     gap: 10px;
 }
 
-#status > div >button {
+#status>div>button {
     display: flex;
     border: none;
     background: none;
     cursor: pointer;
 }
 
-#status > div >button .bi-bookmarks-fill {
+#status>div>button .bi-bookmarks-fill {
     text-transform: uppercase;
     font-size: 2.2em;
     color: rgb(255, 0, 0);
@@ -301,6 +301,36 @@
     width: 1200px;
     display: flex;
     margin: auto;
+}
+
+.supported-Languages-container {
+    margin: auto;
+    width: 1200px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.supported-Languages-container h2 {
+    text-transform: uppercase;
+}
+
+.supported-Languages-container table {
+    border: 1px solid aqua;
+    color: aqua;
+    background: black;
+}
+
+.supported-Languages-container table thead th {
+    border: 1px solid aqua;
+    padding: 10px;
+    gap: 10px;
+}
+
+.supported-Languages-container table tbody tr td {
+    padding: 10px;
+    border: 1px solid aqua;
 }
 
 .system-requirements-table-container {
