--- a/project-g1/src/components/UserProfile/UserProfile.css
+++ b/project-g1/src/components/UserProfile/UserProfile.css
@@ -29,11 +29,12 @@ ul {
 
 .favorites-container, 
 .UserGameList-container {
-    width: 1100px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     padding: 10px 0;
     gap: 10px;
+    margin: auto;
 }
 
 .favorites-container div ul{
