--- a/project-g1/src/components/UserProfile/UserProfile.css
+++ b/project-g1/src/components/UserProfile/UserProfile.css
@@ -52,10 +52,12 @@ ul {
 }
 
 .UserGameList-container div ul{
-    /* width: 860px; */
+    width: 1100px;
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
+    justify-content: space-between;
+    margin: auto;
 }
 
 .user-bio-content {
