--- a/project-g1/src/components/UserProfile/UserProfile.css
+++ b/project-g1/src/components/UserProfile/UserProfile.css
@@ -27,7 +27,7 @@ ul {
     object-fit: cover;
 }
 
-.favorites-container, 
+.favorites-container,
 .UserGameList-container {
     width: 100%;
     display: flex;
@@ -37,13 +37,14 @@ ul {
     margin: auto;
 }
 
-.favorites-container div ul{
+.favorites-container div ul {
     width: 860px;
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
 }
-.favorites-container div ul li > a{
+
+.favorites-container div ul li>a {
     width: 260px;
     flex-direction: column;
     border: 1px solid black;
@@ -51,7 +52,7 @@ ul {
     padding: 10px;
 }
 
-.UserGameList-container div ul{
+.UserGameList-container div ul {
     width: 1100px;
     display: flex;
     flex-wrap: wrap;
@@ -68,4 +69,27 @@ ul {
     width: 600px;
     padding: 10px;
     white-space: pre-line
+}
+
+/* UserNavbar */
+
+.user-navbar {
+    display: flex;
+    justify-content: space-around;
+    background-color: #333;
+    padding: 10px;
+    margin-top: 20px;
+}
+
+.user-navbar button {
+    background-color: #fff;
+    color: #333;
+    border: none;
+    padding: 8px 16px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.user-navbar button:hover {
+    background-color: #ddd;
 }
