--- a/project-g1/src/components/AdvancedSearch/AdvancedSearch.css
+++ b/project-g1/src/components/AdvancedSearch/AdvancedSearch.css
@@ -5,6 +5,16 @@
     margin: auto;
 }
 
+/* BARRA DE PESQUISA */
+.search-filters-container {
+    width: 100%;
+}
+
+.search-filters-container > input{
+    width: 100%;
+    padding: 10px;
+}
+
 /* FILTROS */
 .search-filters {
     width: 100%;
