--- a/project-g1/src/pages/GameDetails/GameDetails.css
+++ b/project-g1/src/pages/GameDetails/GameDetails.css
@@ -5,7 +5,7 @@
 
     --background-navbar-dark: #1e1e1e;
     --text-color-navbar-dark: #e1e1e1;
-    --text-color-logo-dark: purple;
+    --text-color-logo-dark: red;
 }
 
 #container {
@@ -67,7 +67,7 @@
     left: 0;
     width: 100%;
     height: 250px;
-    border-bottom: 2px solid purple;
+    border-bottom: 2px solid red;
     background-image: linear-gradient(180deg, transparent, #1b1b1b);
 }
 
@@ -112,6 +112,7 @@
 
 #status>.title-date {
     flex-direction: column;
+    color: white;
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
@@ -287,7 +288,7 @@
     gap: 20px;
     padding: 10px;
     margin: auto;
-    border: 2px solid purple;
+    border: 2px solid red;
 }
 
 .description-container>p {
